@@ -1,3 +1,9 @@
+2008-11-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* providerMgr.c:
+		Fixed [ 2192053 ] _methProvider return value not checked propery
+			(patch from Klaus Kämpf)
+
 2008-11-03 Sean Swehla  <smswehla@linux.vnet.ibm.com>
 
 	* msgqueue.c msgqueue.h providerDrv.c providerMgr.c:
